--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,11 @@
         </dependency>
         <dependency>
             <groupId>com.itextpdf</groupId>
+            <artifactId>itextpdf</artifactId>
+            <version>5.5.10</version>
+        </dependency>
+        <dependency>
+            <groupId>com.itextpdf</groupId>
             <artifactId>io</artifactId>
             <version>7.0.4</version>
         </dependency>
